fix display text align, adjust sizing and add button styles for disabled state

--- a/index.css
+++ b/index.css
@@ -21,8 +21,8 @@ body {
 
 .calculator {
   display: grid;
-  grid-template-rows: minmax(10rem, auto) repeat(5, 7rem);
-  grid-template-columns: repeat(4, 8rem);
+  grid-template-rows: minmax(10.5rem, auto) repeat(5, 8rem);
+  grid-template-columns: repeat(4, 10rem);
 }
 .calculator__display {
   display: flex;
@@ -37,13 +37,14 @@ body {
   word-wrap: break-word;
   word-break: break-all;
   letter-spacing: 1px;
+  text-align: right;
 }
 .calculator__prev-operand {
   font-size: 2.5rem;
   color: rgba(255, 255, 255, 0.7);
 }
 .calculator__cur-operand {
-  font-size: 4rem;
+  font-size: 3.5rem;
   color: white;
 }
 .calculator__btn {
@@ -59,6 +60,10 @@ body {
 }
 .calculator__btn:hover {
   background-color: rgba(255, 255, 255, 0.9);
+}
+.calculator__btn:disabled {
+  background-color: rgba(110, 110, 110, 0.4);
+  cursor: default;
 }
 .calculator__btn--span-2 {
   grid-column: span 2;
