--- a/sass/_calculator.scss
+++ b/sass/_calculator.scss
@@ -1,7 +1,7 @@
 .calculator {
   display: grid;
-  grid-template-rows: minmax(10rem, auto) repeat(5, 7rem);
-  grid-template-columns: repeat(4, 8rem);
+  grid-template-rows: minmax(10.5rem, auto) repeat(5, 8rem);
+  grid-template-columns: repeat(4, 10rem);
   &__display {
     display: flex;
     flex-direction: column;
@@ -15,13 +15,14 @@
     word-wrap: break-word;
     word-break: break-all;
     letter-spacing: 1px;
+    text-align: right;
   }
   &__prev-operand {
     font-size: 2.5rem;
     color: rgba(255, 255, 255, 0.7);
   }
   &__cur-operand {
-    font-size: 4rem;
+    font-size: 3.5rem;
     color: white;
   }
   &__btn {
@@ -36,6 +37,10 @@
     transition: all 0.1s;
     &:hover {
       background-color: rgba(255, 255, 255, 0.9);
+    }
+    &:disabled {
+      background-color: rgba(110, 110, 110, 0.4);
+      cursor: default;
     }
     &--span-2 {
       grid-column: span 2;
